EDSC-4232: Adding wrapping container to fix banner mismatch tour is having issues

--- a/static/src/css/_base.scss
+++ b/static/src/css/_base.scss
@@ -55,7 +55,8 @@ body .th-wrapper {
 
 .wrapping-container {
   position: relative;
-  height: 95%;
+  overflow-y: auto;
+  flex-grow: 1;
 }
 
 @include media-breakpoint-up(xl) {
